add_executable( data_type_test data_type_test.cpp )

add_executable( data_type_test1 data_type_test1.cpp )

add_executable( char_string_test char_string_test.cpp )

add_executable( string_test string_test.cpp )

add_executable( pointer_address_test pointer_address_test.cpp )

add_executable( pointer_string_test pointer_string_test.cpp )

add_executable( const_test const_test.cpp )

add_executable( bool_type_test bool_type_test.cpp )

# target_link_libraries( myslam
#     ${THIRD_PARTY_LIBS}
# )

# add_executable( run_vo run_vo.cpp )
# target_link_libraries( run_vo myslam )