
add_executable( char_string_test char_string_test.cpp )

add_executable( string_test string_test.cpp )

add_executable( expression_test expression_test.cpp )

add_executable( file_test file_test.cpp )


# target_link_libraries( myslam
#     ${THIRD_PARTY_LIBS}
# )

# add_executable( run_vo run_vo.cpp )
# target_link_libraries( run_vo myslam )